@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST libxfcegui4-4.5.92.tar.bz2 653354 RMD160 b8ada2f07acc57ad56f1250ac65e50e3b535d5b1 SHA1 c423f2c8fe09595926b5b4e24feed635a89e2433 SHA256 5fd60859578bad5241dbb990d7e4515caf89215e866d57dd4286989efcc97c5d
 DIST libxfcegui4-4.5.93.tar.bz2 619533 RMD160 6c08fdc2e30115acab3ec87ba5b304d4b9b554c5 SHA1 1dc67a0c865c673d26054d3c9bfd5844c7331ee8 SHA256 c48ef38e4eed64b6d588b36585b88c1ee85809cef56966fae7916bc0534f6042
+DIST libxfcegui4-4.5.99.1.tar.bz2 672929 RMD160 52db22da242628f18f79cb31caed6fd0c2c54fc7 SHA1 195f7328385f8f59e885771e88463435a630abec SHA256 905d7f453b91b601a16dc0d7e4f92ba3c01647ed30e26074f9393e5b36ebe437
 EBUILD libxfcegui4-4.5.92.ebuild 749 RMD160 66987a4f5980eb3935850e792661f3a329403a14 SHA1 01539069cc00d82cc104e93da0e2bda2c87645ff SHA256 0b4334aa3c7913e92d9c1971b235afd1a1a34c781fda0373de894f8984847aa9
 EBUILD libxfcegui4-4.5.93.ebuild 749 RMD160 66987a4f5980eb3935850e792661f3a329403a14 SHA1 01539069cc00d82cc104e93da0e2bda2c87645ff SHA256 0b4334aa3c7913e92d9c1971b235afd1a1a34c781fda0373de894f8984847aa9
+EBUILD libxfcegui4-4.5.99.1.ebuild 749 RMD160 66987a4f5980eb3935850e792661f3a329403a14 SHA1 01539069cc00d82cc104e93da0e2bda2c87645ff SHA256 0b4334aa3c7913e92d9c1971b235afd1a1a34c781fda0373de894f8984847aa9
 EBUILD libxfcegui4-9999.ebuild 771 RMD160 b70b611637664d0ad2139a03d5153d19db853123 SHA1 ff25ea91ff22a71a05f3486821055c9a6998e907 SHA256 d66b919d2d6cdad7568914cb6e91071f7a1f5b50579e34cf871095c0234ef376
-MISC ChangeLog 722 RMD160 7eaa7299fab557d09b5b9d8cc0bca0361b074199 SHA1 f78985de784597b468bc7e37bf75836cd25dfa94 SHA256 8d10fc583b53f7a5d4ca8caa86b239b24e94a85cef6f34d14f2e60e2e3ca8079
+MISC ChangeLog 859 RMD160 745ff5b7f04311ededba2ce84689708acc429cd7 SHA1 38238027885e22807193c5140aa9cae6689638df SHA256 714be654692dbb87970032ed865b7b6c3cc738e45770bf3eceec2a4075f74ea7
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYcACgkQKhnDs22gwa9/tgCfWI38wMMb8VCZZE1TJNqoVWpt
-rpQAnA3ie81nDvmzBNVsJOqJj49JDZez
-=ltSv
+iEYEARECAAYFAkl9xY4ACgkQKhnDs22gwa9zMgCfVr4/5iR7SJLOurYxrwE+IY0d
+lwkAoM9SvOl+pNTmWz2TIwYtMzzUNIFL
+=E9gO
 -----END PGP SIGNATURE-----
