@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libxfcegui4-4.5.99.1 (26 Jan 2009)
+
+  26 Jan 2009; Christoph Mende <angelos@gentoo.org>
+  +libxfcegui4-4.5.99.1.ebuild:
+  Xfce-4.6 RC1
+
 *libxfcegui4-4.5.93 (14 Jan 2009)
 
   14 Jan 2009; Christoph Mende <angelos@gentoo.org>
